// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmojiSection Component matches the snapshot on initial render 1`] = `
<Fragment>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": "auto",
        "justifyContent": "space-between",
        "marginTop": 27,
        "maxWidth": "100%",
      }
    }
  >
    <EmojiButton
      emoji="💩"
      key="0"
      onPress={[Function]}
      selected=""
    />
    <EmojiButton
      emoji="😘"
      key="1"
      onPress={[Function]}
      selected=""
    />
    <EmojiButton
      emoji="🤦‍♀"
      key="2"
      onPress={[Function]}
      selected=""
    />
    <EmojiButton
      emoji="👿"
      key="3"
      onPress={[Function]}
      selected=""
    />
  </View>
</Fragment>
`;

exports[`EmojiSection Component matches the snapshot to initial EmojiButton render 1`] = `
<View
  onTouchEnd={[MockFunction]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderColor": "rgb(208, 208, 208)",
      "borderRadius": 50,
      "borderWidth": 1,
      "height": 66,
      "justifyContent": "center",
      "width": 66,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 31,
      }
    }
  >
    💩
  </Text>
</View>
`;

exports[`EmojiSection Component renders selected emoji button 1`] = `
<View
  onTouchEnd={[MockFunction]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderColor": "rgb(149, 46, 83)",
      "borderRadius": 50,
      "borderWidth": 1,
      "height": 66,
      "justifyContent": "center",
      "width": 66,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 31,
      }
    }
  >
    💩
  </Text>
</View>
`;

exports[`EmojiSection Component renders the emojis when one is selected 1`] = `
<Fragment>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": "auto",
        "justifyContent": "space-between",
        "marginTop": 27,
        "maxWidth": "100%",
      }
    }
  >
    <EmojiButton
      emoji="💩"
      key="0"
      onPress={[Function]}
      selected="💩"
    />
    <EmojiButton
      emoji="😘"
      key="1"
      onPress={[Function]}
      selected="💩"
    />
    <EmojiButton
      emoji="🤦‍♀"
      key="2"
      onPress={[Function]}
      selected="💩"
    />
    <EmojiButton
      emoji="👿"
      key="3"
      onPress={[Function]}
      selected="💩"
    />
  </View>
</Fragment>
`;
